# r-gen

./: Cargo.toml  README.md
r-gen-macro/: Cargo.toml
r-gen-macro/src/: lib.rs
r_gen_macro/: Cargo.toml
r_gen_macro/src/: lib.rs
src/: distributions.rs  lib.rs  trace.rs
src/r_gen/: distributions.rs  trace.rs
