[package]
name = "r-gen"
version = "0.1.0"
authors = ["Sean Moore <49214378+Hobbs1024@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = false

[dependencies]
probability = "0.17.0"
rand = {version = "0.6", features = ["std"]}
r_gen_macro = { path = "r_gen_macro" }